--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npx @11ty/eleventy --serve --port=8088"
+        "start": "npx @11ty/eleventy --serve --port=8088",
+        "deploy": "npx @11ty/eleventy --output=docs"
     },
     "repository": {
         "type": "git",
